add seed id
